# ai_blitz

./: README.md  pyproject.toml
ai_blitz/: constants.py  data.py
tests/: test_ai_blitz.py
